--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -24,14 +24,14 @@
     "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.x.x",
     "@angular/service-worker": "^7.x.x",
-    "@ionic-native/core": "^5.10.0",
-    "@ionic-native/splash-screen": "^5.10.0",
-    "@ionic-native/status-bar": "^5.10.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic-native/core": "^5.15.1",
+    "@ionic-native/splash-screen": "^5.15.1",
+    "@ionic-native/status-bar": "^5.15.1",
+    "@ionic/angular": "^4.11.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "2.6.8",
-    "rxjs": "~6.5.1",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
@@ -46,20 +46,20 @@
     "@angular/language-service": "^7.x.x",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "~3.3.16",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.6.2",
-    "codelyzer": "~5.1.0",
-    "ionic": "^5.2.7",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.5",
+    "codelyzer": "^5.2.0",
+    "ionic": "^5.4.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.2.0",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.0",
     "typescript": "3.1.6"
   }
 }
